# chroma-prod-poc

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/: manage.py
src/chroma_prod/: settings.py  wsgi.py
src/documents/: serializers.py  views.py
