[tool.poetry]
name = "chroma-prod-poc"
version = "0.1.0"
description = "A POC app that uses Chroma."
authors = ["Martin R <23411718+RonquilloAeon@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django-ninja = "^0.21.0"
chromadb = "^0.3.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
